--- a/composer.json
+++ b/composer.json
@@ -9,18 +9,13 @@
             "email": "bizurkur@gmail.com"
         }
     ],
-    "config": {
-        "platform": {
-            "php": "5.5.9"
-        }
-    },
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=7.1.0",
         "psr/container": "^1.0",
         "psr/http-message": "^1.0",
-        "bittyphp/bitty-http": "^1.0",
-        "bittyphp/bitty-router": "^1.0",
-        "bittyphp/bitty-view": "^1.0"
+        "bittyphp/bitty-http": "^2.0",
+        "bittyphp/bitty-router": "^2.0",
+        "bittyphp/bitty-view": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0",
@@ -36,5 +31,5 @@
             "Bitty\\Tests\\Controller\\": "tests/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
