--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "require-dev": {
         "phpunit/phpunit": "^7.0",
         "squizlabs/php_codesniffer": "^3.0",
-        "jakub-onderka/php-parallel-lint": "^1.0"
+        "jakub-onderka/php-parallel-lint": "^1.0",
+        "localheinz/composer-normalize": "^1.1"
     },
     "autoload": {
         "psr-4": {
