--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,11 @@
         "phpunit/phpunit": "^7.0",
         "squizlabs/php_codesniffer": "^3.0",
         "jakub-onderka/php-parallel-lint": "^1.0",
-        "localheinz/composer-normalize": "^1.1"
+        "localheinz/composer-normalize": "^1.1",
+        "phpstan/phpstan": "^0.10.7",
+        "phpstan/phpstan-deprecation-rules": "^0.10.2",
+        "phpstan/phpstan-phpunit": "^0.10.0",
+        "phpstan/phpstan-strict-rules": "^0.10.1"
     },
     "autoload": {
         "psr-4": {
