--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "psr/http-message": "^1.0"
     },
     "require-dev": {
+        "codacy/coverage": "^1.4",
         "jakub-onderka/php-parallel-lint": "^1.0",
         "localheinz/composer-normalize": "^1.1",
         "phing/phing": "^2.16",
