Dropped bitty- prefix

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bittyphp/bitty-controller",
+    "name": "bittyphp/controller",
     "type": "library",
     "description": "Abstract controller.",
     "license": "MIT",
@@ -11,9 +11,9 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "bittyphp/bitty-http": "^2.0",
-        "bittyphp/bitty-router": "^2.0",
-        "bittyphp/bitty-view": "^2.0",
+        "bittyphp/http": "^2.0",
+        "bittyphp/router": "^2.0",
+        "bittyphp/view": "^2.0",
         "psr/container": "^1.0",
         "psr/http-message": "^1.0"
     },
